[package]
name = "buckshot-roulette-ml"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/Cyberboss/buckshot-roulette-ml"
description = "A machine learning application for the game Buckshot Roulette"
license = "GPL-3.0-or-later"
readme = "README.md"


[dependencies]
buckshot-roulette-gameplay-engine = "5.0.1"
blas-src = { version = "0.4", features = ["openblas"] }
openblas-src = "0.7"
rsrl = { version = "0.8.1", features = ["blas"] }
rand = "0.7"
