[package]
name = "buckshot-roulette-ml"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/Cyberboss/buckshot-roulette-ml"
description = "A machine learning application for the game Buckshot Roulette"
license = "GPL-3.0-or-later"
readme = "README.md"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
buckshot-roulette-gameplay-engine = "6.0.0"
blas-src = { version = "0.4", features = ["openblas"] }
openblas-src = { version = "0.7", features = ["static"] }
rsrl = { version = "0.8.1", features = ["blas"] }
rand = "0.7"
anyhow = "1.0.93"